Build pizza.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="../odin-recipes/recipes/burger.html">Best burger recipe</a>
-
+        <ol>
+        <li><a href="../odin-recipes/recipes/burger.html">Best burger recipe</a></li>
+        <li><a href="../odin-recipes/recipes/pizza.html">Best pizza recipe</a></li>
+        </ol>
     </body>
 </html>
